--- a/app/views/playground/lean_canvas.html.erb
+++ b/app/views/playground/lean_canvas.html.erb
@@ -1,82 +1,84 @@
-<div class='u-flex-row-between'>
-  <div class='p-lean-canvas-title'>
-    <div class='p-lean-canvas-title__text'>
-      サービス名
+<main class='l-main'>
+  <div class='u-flex-row-between'>
+    <div class='c-lean-canvas-title'>
+      <div class='c-lean-canvas-title__text'>
+        サービス名
+      </div>
+      <input class='c-lean-canvas-title__input' type='text'>
     </div>
-    <input class='p-lean-canvas-title__input' type='text'>
+    <div>
+      作成日
+    </div>
   </div>
-  <div>
-    作成日
+  <div class='c-lean-canvas'>
+    <div class='c-lean-canvas__cell c-lean-canvas__cell--problem'>
+      <h3 class='c-lean-canvas__title'>なぜお客様は喜んでくれる？</h3>
+      <p class='c-lean-canvas__subtitle'>課題</p>
+      <p class='c-lean-canvas__subtitle'>PROBLEM</p>
+      <textarea class='js-texarea c-lean-canvas__textarea'></textarea>
+    </div>
+    <div class='c-lean-canvas__cell c-lean-canvas__cell--existing'>
+      <p class='c-lean-canvas__subtitle'>既存の代替品</p>
+      <p class='c-lean-canvas__subtitle'>EXISTING ALTERNATIVES</p>
+      <textarea class='js-texarea c-lean-canvas__textarea'></textarea>
+    </div>
+    <div class='c-lean-canvas__cell c-lean-canvas__cell--solution'>
+      <h3 class='c-lean-canvas__title'>具体的に何を提供する？</h3>
+      <p class='c-lean-canvas__subtitle'>ソリューション</p>
+      <p class='c-lean-canvas__subtitle'>SOLUTION</p>
+      <textarea class='js-texarea c-lean-canvas__textarea'></textarea>
+    </div>
+    <div class='c-lean-canvas__cell c-lean-canvas__cell--key-metrics'>
+      <h3 class='c-lean-canvas__title'>喜んだことをどうやって知る？</h3>
+      <p class='c-lean-canvas__subtitle'>主要指標</p>
+      <p class='c-lean-canvas__subtitle'>KEY METRICS</p>
+      <textarea class='js-texarea c-lean-canvas__textarea'></textarea>
+    </div>
+    <div class='c-lean-canvas__cell c-lean-canvas__cell--unique-value'>
+      <h3 class='c-lean-canvas__title'>なぜお客様は我々から買いたくなる？</h3>
+      <p class='c-lean-canvas__subtitle'>独自の価値提案</p>
+      <p class='c-lean-canvas__subtitle'>UNIQUE VALUE PROPOSITION</p>
+      <textarea class='js-texarea c-lean-canvas__textarea'></textarea>
+    </div>
+    <div class='c-lean-canvas__cell c-lean-canvas__cell--concept'>
+      <p class='c-lean-canvas__subtitle'>わかりやすいコンセプト</p>
+      <p class='c-lean-canvas__subtitle'>HIGH-LEVEL CONCEPT</p>
+      <textarea class='js-texarea c-lean-canvas__textarea'></textarea>
+    </div>
+    <div class='c-lean-canvas__cell c-lean-canvas__cell--advantage'>
+      <h3 class='c-lean-canvas__title'>なぜ我々は喜ばせることができる？</h3>
+      <p class='c-lean-canvas__subtitle'>圧倒的な優位性</p>
+      <p class='c-lean-canvas__subtitle'>UNFAIR ADVANTAGE</p>
+      <textarea class='js-texarea c-lean-canvas__textarea'></textarea>
+    </div>
+    <div class='c-lean-canvas__cell c-lean-canvas__cell--channels'>
+      <h3 class='c-lean-canvas__title'>どうやってコミュニケーションする？</h3>
+      <p class='c-lean-canvas__subtitle'>チャネル</p>
+      <p class='c-lean-canvas__subtitle'>CHANNELS</p>
+      <textarea class='js-texarea c-lean-canvas__textarea'></textarea>
+    </div>
+    <div class='c-lean-canvas__cell c-lean-canvas__cell--customer-segments'>
+      <h3 class='c-lean-canvas__title'>誰に喜んでほしい？</h3>
+      <p class='c-lean-canvas__subtitle'>顧客セグメント</p>
+      <p class='c-lean-canvas__subtitle'>CUSTOMER SEGMENTS</p>
+      <textarea class='js-texarea c-lean-canvas__textarea'></textarea>
+    </div>
+    <div class='c-lean-canvas__cell c-lean-canvas__cell--early-adopter'>
+      <p class='c-lean-canvas__subtitle'>アーリーアダプター</p>
+      <p class='c-lean-canvas__subtitle'>EARLY ADOPTERS</p>
+      <textarea class='js-texarea c-lean-canvas__textarea'></textarea>
+    </div>
+    <div class='c-lean-canvas__cell c-lean-canvas__cell--cost'>
+      <h3 class='c-lean-canvas__title'>コストはどれくらいかかる？</h3>
+      <p class='c-lean-canvas__subtitle'>コスト構造</p>
+      <p class='c-lean-canvas__subtitle'>COST STRUCTURE</p>
+      <textarea class='js-texarea c-lean-canvas__textarea'></textarea>
+    </div>
+    <div class='c-lean-canvas__cell c-lean-canvas__cell--revenue'>
+      <h3 class='c-lean-canvas__title'>結果として我々には何がもたらされる？</h3>
+      <p class='c-lean-canvas__subtitle'>収入の流れ</p>
+      <p class='c-lean-canvas__subtitle'>REVENUE STREAMS</p>
+      <textarea class='js-texarea c-lean-canvas__textarea'></textarea>
+    </div>
   </div>
-</div>
-<div class='p-lean-canvas'>
-  <div class='p-lean-canvas__cell p-lean-canvas__cell--problem'>
-    <h3 class='p-lean-canvas__title'>なぜお客様は喜んでくれる？</h3>
-    <p class='p-lean-canvas__subtitle'>課題</p>
-    <p class='p-lean-canvas__subtitle'>PROBLEM</p>
-    <textarea class='js-texarea p-lean-canvas__textarea'></textarea>
-  </div>
-  <div class='p-lean-canvas__cell p-lean-canvas__cell--existing'>
-    <p class='p-lean-canvas__subtitle'>既存の代替品</p>
-    <p class='p-lean-canvas__subtitle'>EXISTING ALTERNATIVES</p>
-    <textarea class='js-texarea p-lean-canvas__textarea'></textarea>
-  </div>
-  <div class='p-lean-canvas__cell p-lean-canvas__cell--solution'>
-    <h3 class='p-lean-canvas__title'>具体的に何を提供する？</h3>
-    <p class='p-lean-canvas__subtitle'>ソリューション</p>
-    <p class='p-lean-canvas__subtitle'>SOLUTION</p>
-    <textarea class='js-texarea p-lean-canvas__textarea'></textarea>
-  </div>
-  <div class='p-lean-canvas__cell p-lean-canvas__cell--key-metrics'>
-    <h3 class='p-lean-canvas__title'>喜んだことをどうやって知る？</h3>
-    <p class='p-lean-canvas__subtitle'>主要指標</p>
-    <p class='p-lean-canvas__subtitle'>KEY METRICS</p>
-    <textarea class='js-texarea p-lean-canvas__textarea'></textarea>
-  </div>
-  <div class='p-lean-canvas__cell p-lean-canvas__cell--unique-value'>
-    <h3 class='p-lean-canvas__title'>なぜお客様は我々から買いたくなる？</h3>
-    <p class='p-lean-canvas__subtitle'>独自の価値提案</p>
-    <p class='p-lean-canvas__subtitle'>UNIQUE VALUE PROPOSITION</p>
-    <textarea class='js-texarea p-lean-canvas__textarea'></textarea>
-  </div>
-  <div class='p-lean-canvas__cell p-lean-canvas__cell--concept'>
-    <p class='p-lean-canvas__subtitle'>わかりやすいコンセプト</p>
-    <p class='p-lean-canvas__subtitle'>HIGH-LEVEL CONCEPT</p>
-    <textarea class='js-texarea p-lean-canvas__textarea'></textarea>
-  </div>
-  <div class='p-lean-canvas__cell p-lean-canvas__cell--advantage'>
-    <h3 class='p-lean-canvas__title'>なぜ我々は喜ばせることができる？</h3>
-    <p class='p-lean-canvas__subtitle'>圧倒的な優位性</p>
-    <p class='p-lean-canvas__subtitle'>UNFAIR ADVANTAGE</p>
-    <textarea class='js-texarea p-lean-canvas__textarea'></textarea>
-  </div>
-  <div class='p-lean-canvas__cell p-lean-canvas__cell--channels'>
-    <h3 class='p-lean-canvas__title'>どうやってコミュニケーションする？</h3>
-    <p class='p-lean-canvas__subtitle'>チャネル</p>
-    <p class='p-lean-canvas__subtitle'>CHANNELS</p>
-    <textarea class='js-texarea p-lean-canvas__textarea'></textarea>
-  </div>
-  <div class='p-lean-canvas__cell p-lean-canvas__cell--customer-segments'>
-    <h3 class='p-lean-canvas__title'>誰に喜んでほしい？</h3>
-    <p class='p-lean-canvas__subtitle'>顧客セグメント</p>
-    <p class='p-lean-canvas__subtitle'>CUSTOMER SEGMENTS</p>
-    <textarea class='js-texarea p-lean-canvas__textarea'></textarea>
-  </div>
-  <div class='p-lean-canvas__cell p-lean-canvas__cell--early-adopter'>
-    <p class='p-lean-canvas__subtitle'>アーリーアダプター</p>
-    <p class='p-lean-canvas__subtitle'>EARLY ADOPTERS</p>
-    <textarea class='js-texarea p-lean-canvas__textarea'></textarea>
-  </div>
-  <div class='p-lean-canvas__cell p-lean-canvas__cell--cost'>
-    <h3 class='p-lean-canvas__title'>コストはどれくらいかかる？</h3>
-    <p class='p-lean-canvas__subtitle'>コスト構造</p>
-    <p class='p-lean-canvas__subtitle'>COST STRUCTURE</p>
-    <textarea class='js-texarea p-lean-canvas__textarea'></textarea>
-  </div>
-  <div class='p-lean-canvas__cell p-lean-canvas__cell--revenue'>
-    <h3 class='p-lean-canvas__title'>結果として我々には何がもたらされる？</h3>
-    <p class='p-lean-canvas__subtitle'>収入の流れ</p>
-    <p class='p-lean-canvas__subtitle'>REVENUE STREAMS</p>
-    <textarea class='js-texarea p-lean-canvas__textarea'></textarea>
-  </div>
-</div>
+</main>
