--- a/front/scss/Foundation/base.scss
+++ b/front/scss/Foundation/base.scss
@@ -10,3 +10,94 @@ body {
 .content {
   background-color: #f2f3f6;
 }
+
+$blue : #36bbe7;
+
+/* Radio ---------------------------------------------------*/
+input[type="radio"] {
+display: none;
+
+& + label {
+  display: block;
+  cursor: pointer;
+
+  /*通常時の見た目*/
+  &:before {
+    width: 30px;
+    height: 30px;
+    display: inline-block;
+    content: "";
+    border-radius: 17px;
+    vertical-align: middle;
+    border: 2px solid #dddddd;
+    background-color: #f0f0f0;
+    margin: -2px 5px 0 0;
+    transition: .1s;
+  }
+  /*hover時の見た目*/
+  &:hover {
+    color: #808080;
+    &::before {
+      background-color: #fff;
+    }
+  }
+}
+  /*checked時の見た目*/
+  &:checked + label {
+    color: $blue;
+    cursor: default;
+
+    &::before {
+      border-color: $blue !important;
+      background-color: $blue !important;
+      box-shadow: inset 0 0 0 7px #fff;
+    }
+  }  
+}
+
+/* Checkbox ------------------------------------------------*/
+input[type="checkbox"] {
+  display: none;
+
+  & + label {
+    display: block;
+    cursor: pointer;
+
+    /*通常時の見た目*/
+    &:before {
+      content: "\2713";
+      width: 24px;
+      height: 24px;
+      line-height: 22px;
+      font-size: 22px;
+      display: inline-block;
+      vertical-align: middle;
+      text-align: center;
+      color: transparent;
+      padding: 0;
+      border-radius: 4px;
+      border: 2px solid #dddddd;
+      background: #f0f0f0;
+      margin: -3px 12px 0 0;
+      transition: .1s;
+      box-sizing: border-box;
+    }
+    /*hover時の見た目*/
+    &:hover {
+      color: #808080;
+      &::before {
+        background-color: #fff;
+      }
+    }
+  }
+  /*checked時の見た目*/
+  &:checked + label {
+    color: $blue;
+      
+  &:before {
+      background: #fff !important;
+      border-color: $blue !important;
+      color: $blue !important;
+    }
+  }  
+}
