--- a/front/scss/Object/Component/signboard.scss
+++ b/front/scss/Object/Component/signboard.scss
@@ -1,19 +1,42 @@
 .c-signboard {
+  position: relative;
   font-family: 'Quicksand', sans-serif;
   line-height: 50px;
-  color: #369EFB;
+  font-weight: bold;
+  z-index: 1;
 
-  &:before {
+  &:after {
     content: '';
-    display: block;
     position: absolute;
-    height: 70px;
-    width: 70px;
+    display: block;
+    height: 80px;
+    width: 80px;
     transform: rotate(45deg);
     border-radius: 10px;
-    z-index: 1;
-    border: 1px solid #369EFB;
-    left: -12px;
-    top: -11px;
+    border: 2px solid #369efB;
+    background-color: #369efB;
+    left: -10px;
+    top: -10px;
+  }
+
+}
+
+.c-signboard-container {
+  &.is-static {
+    position: absolute;
+    top: 108px;
+    left: 124px;
+  }
+
+  &.is-fixed {
+    position: fixed;
+    top: 108px;
+    left: 124px;
+  }
+
+  &.is-absolute {
+    position: absolute;
+    bottom: 0;
+    left: 124px;
   }
 }
